[package]
name = "khunpk"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }


# Logging / Tracing.
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.17"

#Utility
anyhow = "1.0.58"
